# astToolkit

./: CITATION.cff  README.md  context7.json  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/agents/: tests.md
.github/workflows/: githubRelease.yml  pypiRelease.yml  pythonTests.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
astToolkit/: __init__.py  _astTypes.py  _dumpHandmade.py  _joinClassmethod.py  _namespaceUncertainty.py  _prototypeFind.py  _theSSOT.py  _toolBe.py  _toolClassIsAndAttribute.py  _toolDOT.py  _toolGrab.py  _toolIfThis.py  _toolMake.py  _toolThen.py  _toolkitAST.py  _toolkitContainers.py  _toolkitNodeVisitor.py  _types.py  containers.py  transform.py  transformationTools.py
citations/: CITATION.cff
notesClassFind/: Idea.md
tests/: conftest.py  test_Be.py  test_Containers.py  test_DOT.py  test_Find.py  test_IfThis.py  test_Then.py  test_astConstructors.py  test_astCore.py  test_astHelpers.py  test_astOptimization.py  test_astValidation.py  test_joinClassmethod.py  test_toolkitAST.py  test_transformationTools.py
tests/coverage/: .coverage
tests/dataSamples/: sampleModuleForParsing.py  sampleModuleWithRelativeImports.py
tests/support/: __init__.py  ast_helper.py  i18n_helper.py  os_helper.py
tests/test_ast/: snippets.py  test_ast.py  utils.py
toolFactory/: README.md  Z0Z_hardcoded.py  Z0Z_makeAstTools.py  __init__.py  _snippets.py  astFactory.py  astFactory_annex.py  databaseAST.csv  databaseAST.py  databaseAST10.csv  databaseAST11.csv  databaseAST12.csv  databaseAST13.csv  databaseAST9.csv  databaseASTCreation.py  datacenter.py  dataframeAST.parquet  factory3.py  factory_annex.py  pyproject.toml
