[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
classifiers = []
dependencies = [
	"mypy",
	"pandas",
	"pandas-stubs",
	"pyupgrade",
	"tomli",
	"Z0Z_tools",]
description = ""
keywords = []
license = { 'text' = "CC-BY-NC-4.0" }
name = "toolFactory"
optional-dependencies = {}
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolkit", Repository = "https://github.com/hunterhogan/astToolkit.git" }
version = "0.0.1"

[tool.coverage]
report = { exclude_lines = [
	"if TYPE_CHECKING:",
	"if __name__ == \"__main__\":",
], ignore_errors = false }
run = { branch = true, concurrency = [
	"multiprocessing",
], data_file = "tests/coverage/.coverage", omit = [
	"tests/*",
], parallel = true, source = [
	".",] }
xml = { output = "tests/coverage/coverage.xml" }

[tool.pytest.ini_options]
log_auto_indent = true
addopts = ["--color=auto"]
testpaths = ["tests"]

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = { find = {} }
